Add Chalk, format server-side console output

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -288,6 +288,7 @@
         }
         console.log(answers);
 
+        //post the info
         $.ajax(window.location.origin + '/api/friends', {
             data : JSON.stringify(data),
             contentType : 'application/json',
