More feedback for htmlRoutes

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -294,6 +294,8 @@
             contentType : 'application/json',
             type : 'POST'
         });
+
+        //get best match
     });
 </script>    
 
