Response for best match, front and back working

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -293,6 +293,8 @@
             data : JSON.stringify(data),
             contentType : 'application/json',
             type : 'POST'
+        }).done(function(res){
+            console.log(res);
         });
 
         //get best match
