--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -239,7 +239,7 @@
 
         <!-- Submit Button -->
         <div class="container">
-            <button type="submit" class="btn btn-lg btn-block btn-primary" id="submit">Submit</button>
+            <button type="submit" class="btn btn-lg btn-block btn-primary" id="submit" data-toggle="modal" data-target="#myModal">Submit</button>
         </div>
         
         <br>
@@ -250,27 +250,24 @@
 
 
     <!-- Modal -->
-    <div id="resultsModal" class="modal fade" role="dialog">
-      <div class="modal-dialog">
-
-        <!-- Modal content-->
+    <div class="modal fade" tabindex="-1" role="dialog" id='myModal'>
+      <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal">&times;</button>
-            <h2 class="modal-title"><strong>Best Match</strong></h2>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title">Best Match</h4>
           </div>
-
           <div class="modal-body">
-            <h2 id="matchName"></h2>
+            <img id='matchPhoto' src="">
+            <h2 id='matchName'></h2>
+
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
           </div>
-
-        </div>
-
-      </div>
-    </div>
+        </div><!-- /.modal-content -->
+      </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
 
 <script type="text/javascript">
     $('#submit').on('click', function(){
@@ -293,11 +290,14 @@
             data : JSON.stringify(data),
             contentType : 'application/json',
             type : 'POST'
-        }).done(function(res){
+        }).done(function(res){ //get best match
             console.log(res);
+            console.log(res.photo);
+            $('#matchPhoto').attr('src', res.photo);
+            $('#matchName').text(res.name);
         });
 
-        //get best match
+
     });
 </script>    
 
