--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -239,7 +239,7 @@
 
         <!-- Submit Button -->
         <div class="container">
-            <button type="submit" class="btn btn-lg btn-block btn-primary" id="submit" data-toggle="modal" data-target="#myModal">Submit</button>
+            <button type="submit" class="btn btn-lg btn-block btn-primary" id="submit">Submit</button>
         </div>
         
         <br>
@@ -258,9 +258,8 @@
             <h4 class="modal-title">Best Match</h4>
           </div>
           <div class="modal-body">
-            <img id='matchPhoto' src="">
-            <h2 id='matchName'></h2>
-
+            <img id='matchPhoto' src="" class="img-responsive center-block">
+            <h2 id='matchName' class="text-center"></h2>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -293,8 +292,9 @@
         }).done(function(res){ //get best match
             console.log(res);
             console.log(res.photo);
-            $('#matchPhoto').attr('src', res.photo);
-            $('#matchName').text(res.name);
+            $('#matchPhoto').attr('src', res.photo); //populate photo
+            $('#matchName').text(res.name); //populate name
+            $("#myModal").modal('toggle'); //toggle modal to display
         });
 
 
