--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -270,6 +270,7 @@
 
 <script type="text/javascript">
     $('#submit').on('click', function(){
+
         event.preventDefault();
         var answers = [];
         var data ={
@@ -283,22 +284,37 @@
             answers.push(val);
         }
         console.log(answers);
+        let valid = notEmpty(answers);
 
+        if( valid ===true){
         //post the info
-        $.ajax(window.location.origin + '/api/friends', {
-            data : JSON.stringify(data),
-            contentType : 'application/json',
-            type : 'POST'
-        }).done(function(res){ //get best match
-            console.log(res);
-            console.log(res.photo);
-            $('#matchPhoto').attr('src', res.photo); //populate photo
-            $('#matchName').text(res.name); //populate name
-            $("#myModal").modal('toggle'); //toggle modal to display
-        });
+            $.ajax(window.location.origin + '/api/friends', {
+                data : JSON.stringify(data),
+                contentType : 'application/json',
+                type : 'POST'
+            }).done(function(res){ //get best match
+                console.log(res);
+                console.log(res.photo);
+                $('#matchPhoto').attr('src', res.photo); //populate photo
+                $('#matchName').text(res.name); //populate name
+                $("#myModal").modal('toggle'); //toggle modal to display
+            });
+        } else {
+            console.log('ERROR: Not all fields completed');
+            $('#matchPhoto').attr('src','img/sign_warning.png' ); //populate photo
+            $('#matchName').text('Please complete all fields');
+            $("#myModal").modal('toggle');
+        }
 
 
     });
+
+    function notEmpty(answerList){
+        if( $('#name').val() === '' || $('#photo').val() === '' || answerList.indexOf('') > -1 ){
+            return false;
+        }
+        return true;
+    }
 </script>    
 
 </body>
